created img formatting

--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,14 +1,140 @@
-header{
-  width: 100%;
-  height: 400px;
-  background-color: $orange;
-  h2.header__title{
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    padding-top: 100px;
-    color: $aqua;
-    text-shadow: 0 0 4px black;
-    font-size: $f-size1;
+.header{
+
+  &__container {
+    padding: 43px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
+  &__logo-link{
+    text-decoration: none;
+  }
+
+
+  &__logo-img{
+    width: 236px;
+    height: 26px;
+  }
+
+  .nav{
+    &__list{
+      max-width: 283px;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &__link{
+      text-decoration: none;
+      font-family: 'Barlow';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 12px;
+      line-height: 15px;
+      letter-spacing: 0.923077px;
+      text-transform: uppercase;
+      color: $grey;
+    }
+
+    &__link:hover{
+      color: $very-dark-grey;
+    }
+
+    &__link--active{
+      color: $very-dark-grey;
+    }
+
+    &__item:not(:last-child){
+      margin-right: 32px;
+    }
+  }
+
+  &__burger-link{
+    display: none;
+  }
+}
+@media only screen and (max-width: 576px){
+  .header{
+
+
+    &__container {
+      padding: 40px 0 53px;
+    }
+    &__logo-link{
+      text-decoration: none;
+    }
+    &__logo-img{
+      width: 203px;
+      height: 24px;
+    }
+
+    .nav{
+      &__list{
+        display: flex;
+      }
+
+      &__item:not(:last-child){
+        margin-right: 15px;
+      }
+    }
+  }
+
+}
+
+@media only screen and (max-width: 520px){
+  .header{
+
+
+    &__container{
+      padding: 35px 0 35px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__logo-link{
+      margin-bottom: 15px;
+    }
+
+
+    &__logo-img{
+      max-width: 203px;
+      width: 100%;
+      max-height: 24px;
+      height: 100%;
+    }
+
+    .nav{
+
+      &__item:not(:last-child){
+        margin-right: 25px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 375px){
+  .header{
+
+    &__container {
+      padding: 32px 0 40px;
+      display: flex;
+      align-items: center;
+    }
+    &__logo-link{
+      text-decoration: none;
+    }
+    &__logo-img{
+      width: 203px;
+      height: 24px;
+    }
+
+    .nav{
+      &__list{
+        display: none;
+      }
+    }
+
+
+  }
+
 }
