--- a/css/main.css
+++ b/css/main.css
@@ -341,6 +341,42 @@ template {
   display: none;
 }
 
+/* barlow-regular - latin */
+@font-face {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/barlow-v12-latin-regular.woff2") format("woff2"), url("../fonts/barlow-v12-latin-regular.woff") format("woff");
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* barlow-700 - latin */
+@font-face {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/barlow-v12-latin-700.woff2") format("woff2"), url("../fonts/barlow-v12-latin-700.woff") format("woff");
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* fraunces-regular - latin */
+@font-face {
+  font-family: 'Fraunces';
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/fraunces-v22-latin-regular.woff2") format("woff2"), url("../fonts/fraunces-v22-latin-regular.woff") format("woff");
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* fraunces-900 - latin */
+@font-face {
+  font-family: 'Fraunces';
+  font-style: normal;
+  font-weight: 900;
+  src: url("../fonts/fraunces-v22-latin-900.woff2") format("woff2"), url("../fonts/fraunces-v22-latin-900.woff") format("woff");
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -377,24 +413,139 @@ ul, ol {
 }
 
 .container {
-  max-width: 1276px;
+  max-width: 1320px;
   margin: 0 auto;
   padding: 0 20px;
 }
 
-header {
-  width: 100%;
-  height: 400px;
-  background-color: orange;
+.header__container {
+  padding: 43px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-header h2.header__title {
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  padding-top: 100px;
-  color: aqua;
-  text-shadow: 0 0 4px black;
-  font-size: 72px;
+.header__logo-link {
+  text-decoration: none;
+}
+
+.header__logo-img {
+  width: 236px;
+  height: 26px;
+}
+
+.header .nav__list {
+  max-width: 283px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header .nav__link {
+  text-decoration: none;
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.923077px;
+  text-transform: uppercase;
+  color: #83888F;
+}
+
+.header .nav__link:hover {
+  color: #444545;
+}
+
+.header .nav__link--active {
+  color: #444545;
+}
+
+.header .nav__item:not(:last-child) {
+  margin-right: 32px;
+}
+
+.header__burger-link {
+  display: none;
+}
+
+@media only screen and (max-width: 576px) {
+  .header__container {
+    padding: 40px 0 53px;
+  }
+  .header__logo-link {
+    text-decoration: none;
+  }
+  .header__logo-img {
+    width: 203px;
+    height: 24px;
+  }
+  .header .nav__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .header .nav__item:not(:last-child) {
+    margin-right: 15px;
+  }
+}
+
+@media only screen and (max-width: 520px) {
+  .header__container {
+    padding: 35px 0 35px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .header__logo-link {
+    margin-bottom: 15px;
+  }
+  .header__logo-img {
+    max-width: 203px;
+    width: 100%;
+    max-height: 24px;
+    height: 100%;
+  }
+  .header .nav__item:not(:last-child) {
+    margin-right: 25px;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .header__container {
+    padding: 32px 0 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .header__logo-link {
+    text-decoration: none;
+  }
+  .header__logo-img {
+    width: 203px;
+    height: 24px;
+  }
+  .header .nav__list {
+    display: none;
+  }
 }
 /*# sourceMappingURL=main.css.map */
